--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,88 @@
   color: white;
   height: 50px;
 }
+
+@media only screen and (max-width: 768px) {
+  .yellow {
+    background-color: purple;
+    padding: 30px;
+  }
+  .blue {
+    background-color: yellow;
+    height: 100px;
+
+  }
+
+  .green {
+    background-color:pink;
+    height:50px;
+  }
+
+  .border {
+    border: 1px solid grey;
+    padding:15px;
+  }
+
+  .red {
+    background-color:white;
+    height: 180px;
+  }
+
+  .lightblue {
+    background-color: brown;
+    height: 180px;
+  }
+
+  .orange {
+    background-color: green;
+    height: 180px;
+  }
+
+  .black {
+    background-color: orange;
+    color: white;
+    height: 50px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .yellow {
+    background-color: white;
+    padding: 30px;
+  }
+  .blue {
+    background-color: pink;
+    height: 100px;
+
+  }
+
+  .green {
+    background-color:yellow;
+    height:50px;
+  }
+
+  .border {
+    border: 1px solid black;
+    padding:15px;
+  }
+
+  .red {
+    background-color:orange;
+    height: 180px;
+  }
+
+  .lightblue {
+    background-color: red;
+    height: 180px;
+  }
+
+  .orange {
+    background-color: lightblue;
+    height: 180px;
+  }
+
+  .black {
+    background-color: purple;
+    color: white;
+    height: 50px;
+  }
+}
